# atlas_recorder

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  rebuild.sh
src/: CMakeLists.txt  main.cpp  recorder.cpp  recorder.h
